@@ -88,6 +88,24 @@
   #include <alloca.h>
 #endif
 
+/* Visual C does not define these functions */
+#if defined(_MSC_VER)
+  #define copysignf(x, y) ((float)_copysign(x, y))
+  #define copysign(x, y) _copysign(x, y)
+  #define nextafterf(x, y) _nextafterf(x, y)
+  #define nextafter(x, y) _nextafter(x, y)
+  #if !defined(_WIN64)
+    #define _ODE__NEXTAFTERF_REQUIRED
+  #endif
+#endif
+
+#ifdef dSINGLE
+  #if defined(_ODE__NEXTAFTERF_REQUIRED)
+    ODE_EXTERN_C float _nextafterf(float x, float y);
+  #endif
+#else
+  #undef _ODE__NEXTAFTERF_REQUIRED
+#endif
 
 #ifdef dSINGLE
        #define dEpsilon  FLT_EPSILON
